src/objects/LabTools_Job__c.object
<CustomObject>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastEndedOn__c</fullName>
        <label>Last Ended On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastError__c</fullName>
        <label>Last Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastRunOn__c</fullName>
        <label>Last Run On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Runner__c</fullName>
        <label>Runner</label>
        <referenceTo>LabTools_Runner__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>